# UpGuardian

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: ci.yml  clippy.yml  fmt.yml  main.yml  reusable-build.yml  test.yml
e2e/: package.json  playwright.config.ts
e2e/tests/: fixtures.ts  home.spec.ts  pages.spec.ts  sites.spec.ts
migrations/: 20260313000000_AddJobErrorTracking.sql  20260313000001_AddDeadLetterJobs.sql
src/: cron.rs  main.rs  session.rs  setup.rs  templates.rs
src/jobs/: create_checkin.rs  hello.rs
src/routes/: home.rs  login.rs  mod.rs  test_login.rs
src/routes/current_user/: pages.rs  sites.rs
