[package]
name = "up_guardian"
version = "0.1.0"
edition = "2021"
license = "private"
build = "build.rs"

[dependencies]
miette = { version = "5.7", features = ["fancy"] }

tokio = { version = "1.21", features = ["full"] }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
sentry = { version = "0.31.5", default-features = false, features = [
  "rustls",
  "backtrace",
  "contexts",
  "panic",
  "tower",
  "reqwest",
] }
sentry-tower = { version = "0.31.5", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maud = { version = "0.27.0", features = ["axum"] }

async-trait = "0.1.60"
axum = { version = "0.8", features = ["macros"] }

reqwest = { version = "0.11.22", features = [
  "json",
  "rustls-tls",
], default-features = false }
jsonwebtoken = "9.1.0"
chrono = "0.4.31"

cja = { version = "0.0.0", git = "https://github.com/coreyja/cja", branch = "main" }
color-eyre = "0.6"
futures = "0.3.30"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "macros", "uuid"] }
uuid = { version = "1.6.1", features = ["v4"] }
tower-cookies = { version = "0.11.0", features = ["private", "signed"] }
mime_guess = "2.0.4"
include_dir = { version = "0.7.3", features = ["metadata", "glob"] }
humantime = "2.1.0"
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["trace"] }
